package catan.data;

public enum ResourceType {
	WOOD, BRICK, SHEEP, WHEAT, ORE, DESERT
}
